# stock_market_project

django_project/: db.sqlite3  pyproject.toml
django_project/my_app/: admin.py  models.py  urls.py  utils.py  views.py
django_project/my_app/management/commands/: update_stocks.py
django_project/my_app/migrations/: 0001_initial.py
django_project/my_project/: asgi.py  settings.py
django_project/templates/: base.html
django_project/templates/home/: web.html
django_project/templates/stock/: detail.html  search.html
